# forcecode

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ci.yml  config.example.json  forgecode.py  install-force.bat  install-force.ps1  pull_request_template.md  pyproject.toml
.github/workflows/: ci.yml
docs/: EXECUTION_ENGINE.md
tests/: test_forgecode.py
